--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+
+    <script type="module">
+      import { createApp } from 'vue';
+      import { App as TheApp } from '/src/main.ts';
+
+      createApp(TheApp).mount('#app');
+    </script>
   </body>
 </html>
