--- a/example_integration.html
+++ b/example_integration.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My website</title>
 
-    <link rel="stylesheet" href="/dist/style.css">
+    <link rel="stylesheet" href="./dist/style.css">
   </head>
   <body>
     <div id="the-div"></div>
@@ -20,7 +20,7 @@
 
     <script type="module">
       import { createApp } from 'vue';
-      import { App as VueLibExample } from '/dist/vue-lib-example.js';
+      import { App as VueLibExample } from './dist/vue-lib-example.js';
 
       createApp(VueLibExample).mount('#the-div');
     </script>
